<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home1"
        android:title="@string/text_ic_home"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/ic_cart"
        android:icon="@drawable/ic_shop1"
        android:title="@string/text_ic_shop"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/ic_notification"
        android:icon="@drawable/ic_notice"
        android:title="@string/text_ic_notice"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/ic_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_ic_profile"
        app:showAsAction="withText"
        />

</menu>