<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="fitCenter"
    tools:context=".ui.welcome.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <!--Progress Bar-->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <!--Apps Logo-->
        <ImageView
            android:id="@+id/iv_login_apps_logo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toEndOf="@+id/guideline1a"
            app:layout_constraintEnd_toStartOf="@id/guideline1b"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2a"
            android:src="@drawable/logo_recob_green"/>

        <!--Email Input Edit-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_shape_border"
            android:elevation="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/hint_text_email"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guideline1b"
            app:layout_constraintStart_toStartOf="@id/guideline1a"
            app:layout_constraintTop_toBottomOf="@+id/guideline2a" />

        <!--Password Input Edit-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_shape_border"
            android:elevation="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/hint_text_password"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            app:layout_constraintStart_toEndOf="@id/guideline1a"
            app:layout_constraintEnd_toStartOf="@id/guideline1b"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <!--Reminder Checkbox-->
        <CheckBox
            android:id="@+id/cb_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/grey"
            android:fontFamily="@font/roboto"
            android:text="@string/checkbox_text_reminder"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/guideline1a"
            app:layout_constraintTop_toBottomOf="@id/edit_password" />

        <!--Forgot Password Link-->
        <TextView
            android:id="@+id/tv_forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:textSize="16sp"
            android:textColor="@color/sage"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toStartOf="@+id/guideline1b"
            app:layout_constraintTop_toTopOf="@+id/cb_reminder"
            app:layout_constraintBottom_toBottomOf="@+id/cb_reminder"/>

        <!--Login Button-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/button_text_login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/rounded_shape_border_button"
            app:layout_constraintStart_toEndOf="@id/guideline1a"
            app:layout_constraintEnd_toStartOf="@+id/guideline1b"
            app:layout_constraintTop_toBottomOf="@+id/cb_reminder" />

        <!--Register Link-->
        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/link_text_register"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintStart_toEndOf="@id/guideline1a"
            app:layout_constraintEnd_toStartOf="@+id/guideline1b"/>

        <!--Guideline-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>